--- a/app/templates/docentes/agregar_nota.html
+++ b/app/templates/docentes/agregar_nota.html
@@ -2,6 +2,7 @@
 
 {% block title %}Agregar Nota{% endblock %}
 {% block role %}Docente{% endblock %}
+
 {% block sidebar_content %}
 <a href="{{ url_for('docentes.index') }}" class="sidebar-link">
     <i class="fas fa-home"></i>
@@ -28,7 +29,8 @@
     <span>Notas</span>
 </a>
 {% endblock %}
-{% block content %}
+
+{% block admin_content %}
 <div class="container mt-4">
   <h2>Agregar Nueva Nota</h2>
   <form method="POST" class="mt-3">
@@ -41,19 +43,25 @@
         {% endfor %}
       </select>
     </div>
+
     <div class="mb-3">
       <label for="ejercicio_id" class="form-label">Ejercicio</label>
       <select name="ejercicio_id" id="ejercicio_id" class="form-select" required>
         <option value="">Selecciona un ejercicio</option>
         {% for ejercicio in ejercicios %}
-        <option value="{{ ejercicio.id }}">{{ ejercicio.titulo }}</option>
+        <option value="{{ ejercicio.id }}">
+          {{ ejercicio.titulo }} (Grado: {{ ejercicio.grado_destinado.nombre }})
+        </option>
         {% endfor %}
       </select>
     </div>
+
+    
     <div class="mb-3">
       <label for="valor" class="form-label">Nota</label>
       <input type="number" step="0.01" name="valor" id="valor" class="form-control" required>
     </div>
+
     <button type="submit" class="btn btn-primary">Guardar</button>
     <a href="{{ url_for('docentes.notas') }}" class="btn btn-secondary">Cancelar</a>
   </form>
